--- a/workshops.html
+++ b/workshops.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Atomic+Age" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <title>Workshops - Beach Casting</title>
+    <title>Workshops</title>
   </head>
   <body>
     <header>
