--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,13 @@
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Atomic+Age" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <title>Contact us - Beach Casting</title>
+    <title>Contact us</title>
   </head>
   <body>
     <header>
       <nav>
         <div class="logo">
-          <a href="index.html">Beach Casting</a>
+          <a href="index.html">Beta Casting</a>
         </div>
         <ul id="nav-bar">
           <li class="nav-item"><a href="welcome.html">Welcome</a></li>
