--- a/welcome.html
+++ b/welcome.html
@@ -24,3 +24,11 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="main-container">
+        <div class="text-block-left">
+        </div>
+        <div class="right-container">
+        </div>
+      </div>
+    </main>
