--- a/workshops.html
+++ b/workshops.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="index.html">Beach Casting</a>
+          <a href="index.html">Beta Casting</a>
         </div>
         <ul id="nav-bar">
           <li class="nav-item"><a href="welcome.html">Welcome</a></li>
